in config.actionlog, "errorOccured" field name is misspelled, should be "errorOccurred"

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Hide

      Note that the field name "details.errorOccured" is misspelled in documents added to config.actionlog in a sharded cluster. It should be "details.errorOccurred" (with two "r"s). Here's an example:

       

      {
              "_id" : "atlas-xxxxxx-config-00-02.xxxxxx.mongodb.net-2021-04-15T14:38:16.982+0000-60784fd80ab137d96138bba8",
              "server" : "atlas-xxxxx-config-00-02.xxxxx.mongodb.net",
              "clientAddr" : "",
              "time" : ISODate("2021-04-15T14:38:16.982Z"),
              "what" : "balancer.round",
              "ns" : "",
              "details" : {
                      "executionTimeMillis" : 13247,
                      "errorOccured" : false,
                      "candidateChunks" : 2,
                      "chunksMoved" : 2
              }
      }
      

       

      Show
      Note that the field name "details.errorOccured" is misspelled in documents added to config.actionlog in a sharded cluster. It should be "details.errorOccurred" (with two "r"s). Here's an example:   { "_id" : "atlas-xxxxxx-config-00-02.xxxxxx.mongodb.net-2021-04-15T14:38:16.982+0000-60784fd80ab137d96138bba8", "server" : "atlas-xxxxx-config-00-02.xxxxx.mongodb.net", "clientAddr" : "", "time" : ISODate("2021-04-15T14:38:16.982Z"), "what" : "balancer.round", "ns" : "", "details" : { "executionTimeMillis" : 13247, "errorOccured" : false, "candidateChunks" : 2, "chunksMoved" : 2 } }  
    • None
    • None
    • None
    • None
    • None
    • None
    • None

          Assignee:
          Paolo Polato
          Reporter:
          Spencer Brown
          Votes:
          0 Vote for this issue
          Watchers:
          2 Start watching this issue

            Created:
            Updated:
            Resolved: