SERVER-56276 correct typo in config.actionlog document field