src/mongo/db/s/balancer/balancer.cpp
@@ -106,7 +106,7 @@ public:
     BSONObj toBSON() const {
         BSONObjBuilder builder;
         builder.append("executionTimeMillis", _executionTimer.millis());
-        builder.append("errorOccured", _errMsg.is_initialized());
+        builder.append("errorOccurred", _errMsg.is_initialized());
 
         if (_errMsg) {
             builder.append("errmsg", *_errMsg);
